--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
