--- a/src/index.scss
+++ b/src/index.scss
@@ -26,13 +26,11 @@ input:-webkit-autofill:focus {
       --color-bg-tertiary: #fafbfc;
       --color-bg-extra: rgb(20, 50, 255);
       --color-text-primary: black;
-      --color-text-secondary: black;
-      --color-text-tertiary: black;
+      --color-text-secondary: rgb(107 114 128);
+      --color-text-tertiary: rgb(229 231 235);
       --color-text-hover: rgb(37 99 235);
-
-      --color-text-inverted: white;
-      --color-bg-chat: #dedee0;
-      --color-border: black;
+      --color-text-link: rgb(37 99 235);
+      --color-border: rgb(209 213 219);
   }
   [data-theme='dark'] {
       --color-bg-primary: #0d1117;
@@ -40,13 +38,11 @@ input:-webkit-autofill:focus {
       --color-bg-tertiary: #010409;
       --color-bg-extra: rgb(20, 50, 255);
       --color-text-primary: white;
-      --color-text-secondary: white;
-      --color-text-tertiary: white;
+      --color-text-secondary: rgb(209 213 219);
+      --color-text-tertiary: rgb(75 85 99);
       --color-text-hover: rgb(37 99 235);
-
-      --color-text-inverted: black;
-      --color-bg-chat: #3d3d3d;
-      --color-border: white;
+      --color-text-link: rgb(37 99 235);
+      --color-border: rgb(75 85 99);
   }
 }
 
