--- a/src/pages/public/InfoPageViewPage.css
+++ b/src/pages/public/InfoPageViewPage.css
@@ -1,18 +1,8 @@
-ul { 
+#infoText ul { 
     list-style-type: disc; 
     list-style-position: inside; 
  }
- ol { 
+#infoText ol { 
     list-style-type: decimal; 
     list-style-position: inside; 
- }
- ul ul, ol ul { 
-    list-style-type: circle; 
-    list-style-position: inside; 
-    margin-left: 15px; 
- }
- ol ol, ul ol { 
-    list-style-type: lower-latin; 
-    list-style-position: inside; 
-    margin-left: 15px; 
  }
